--- a/standalone/CMakeLists.txt
+++ b/standalone/CMakeLists.txt
@@ -23,6 +23,13 @@ CPMAddPackage(
 
 CPMAddPackage(NAME math SOURCE_DIR ${CMAKE_CURRENT_LIST_DIR}/..)
 
+# Add package: shoejunk/log
+CPMAddPackage(
+	NAME log
+	GITHUB_REPOSITORY shoejunk/log
+	VERSION 1.3.0
+)
+
 # ---- Create standalone executable ----
 
 file(GLOB sources CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
@@ -31,4 +38,4 @@ add_executable(${PROJECT_NAME} ${sources})
 
 set_target_properties(${PROJECT_NAME} PROPERTIES CXX_STANDARD 23 OUTPUT_NAME "math")
 
-target_link_libraries(${PROJECT_NAME} math cxxopts)
+target_link_libraries(${PROJECT_NAME} cxxopts math log)
