--- a/standalone/CMakeLists.txt
+++ b/standalone/CMakeLists.txt
@@ -28,7 +28,7 @@ CPMAddPackage(
 	NAME log
 	GITHUB_REPOSITORY shoejunk/log
 	#VERSION 1.3.1
-	GIT_VERSION main
+	GIT_TAG main
 )
 
 # ---- Create standalone executable ----
